fix: logo not showing

--- a/src/app/register/components/user-register/user-register.css
+++ b/src/app/register/components/user-register/user-register.css
@@ -67,7 +67,7 @@ mat-form-field {
 
 
 .logo-bitsofme {
-  width: 140px;
+  width: 240px;
   margin: 0 auto 20px auto;
 }
 
